WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290198
[WebGPU] On M1 MBP -
https://threejs.org/examples/webgpu_mesh_batch.html
encounters MTLCommandBufferErrorDomain Code=1 "Internal Error (00000100:Internal Error)
https://bugs.webkit.org/show_bug.cgi?id=290198
Summary
[WebGPU] On M1 MBP - https://threejs.org/examples/webgpu_mesh_batch.html enco...
Mike Wyrzykowski
Reported
2025-03-21 11:43:19 PDT
Opening
https://threejs.org/examples/webgpu_mesh_batch.html
and increasing the count from 512 -> 2048 results in the following error: ``` MTLCommandBufferErrorDomain Code=1 "Internal Error (00000100:Internal Error) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-03-21 11:43:35 PDT
<
rdar://problem/147596873
>
Mike Wyrzykowski
Comment 2
2025-03-21 11:52:45 PDT
This works on my phone, it seems M1 Mac specific. Or possibly the gpu architecture of M1 Mac specific
Mike Wyrzykowski
Comment 3
2025-03-21 12:00:43 PDT
This is another issue related to memory barriers it seems. Skipping the memory barriers and the site works correctly. Need to figure out if there is a limit to the number of memory barriers on M1 Macs
Mike Wyrzykowski
Comment 4
2025-03-21 14:46:57 PDT
This might be fixed on latest betas of macOS Sequoia
Mike Wyrzykowski
Comment 5
2025-03-21 15:23:56 PDT
This continues to reproduce on M1 on Safari Technology Preview
Mike Wyrzykowski
Comment 6
2025-03-21 15:37:27 PDT
Potentially due to
https://bugs.webkit.org/show_bug.cgi?id=289147
- checking
Mike Wyrzykowski
Comment 7
2025-03-21 15:43:44 PDT
seems unrelated, attempting an autospade
Mike Wyrzykowski
Comment 8
2025-03-22 14:38:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42887
Mike Wyrzykowski
Comment 9
2025-03-23 10:50:17 PDT
I can't reproduce this issue on M1 Mac Mini or M1 MBA. Just the M1 MBP
EWS
Comment 10
2025-03-27 10:21:15 PDT
Committed
292768@main
(8f9f2e70a16d): <
https://commits.webkit.org/292768@main
> Reviewed commits have been landed. Closing PR #42887 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug