[WebGPU] On M1 Macs - https://threejs.org/example s/webgpu_mesh_batch.html encounters MTLCommandBufferErrorDomain Code=1 "Internal Error (00000100:Internal Error) https://bugs.webkit.org/show_bug.cgi?id=290198 rdar://147596873

Reviewed by Tadeu Zagallo.

It appears M1 Macs do not support more than ~1000 memory
barriers in a single render pass encoder, so split the pass
if needed on M1 Macs.

All M1 Macs are Apple7 feature set and M1 iPads do not
appear limited by this issue. Therefore only limit the memory
barrier count on macOS M1 Macs.

* Source/WebGPU/WebGPU/HardwareCapabilities.h:
* Source/WebGPU/WebGPU/HardwareCapabilities.mm:
(WebGPU::baseCapabilities):
(WebGPU::apple4):
(WebGPU::mac2):
(WebGPU::mergeBaseCapabilities):
* Source/WebGPU/WebGPU/RenderBundleEncoder.mm:
(WebGPU::RenderBundleEncoder::drawIndexed):
(WebGPU::RenderBundleEncoder::drawIndexedIndirect):
(WebGPU::RenderBundleEncoder::drawIndirect):
* Source/WebGPU/WebGPU/RenderPassEncoder.h:
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::m_maxDrawCount):
(WebGPU::RenderPassEncoder::executePreDrawCommands):
(WebGPU::RenderPassEncoder::emitMemoryBarrier):
(WebGPU::RenderPassEncoder::clampIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectIndexBufferToValidValues):
(WebGPU::RenderPassEncoder::clampIndirectBufferToValidValues):
(WebGPU::RenderPassEncoder::drawIndexed):
(WebGPU::RenderPassEncoder::drawIndexedIndirect):
(WebGPU::RenderPassEncoder::splitRenderPass):
(WebGPU::RenderPassEncoder::drawIndirect):
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/292768@main